<resources>
    <string name="app_name">YScale</string>

    <string name="dummy_button">Tare</string>
    <string name="dummy_content">Offline</string>
    <string name="calibrate_button">Calibrate</string>
    <string name="ref_hint">Current weight</string>
    <string name="max_hint">Maximum weight</string>
    <string name="cancel">Cancel</string>
    <string name="set_reference">Set reference</string>
    <string name="saved_ref_weight">saved_ref_weight</string>
    <string name="saved_ref_count">saved_ref_count</string>
    <string name="saved_ref_unit">saved_ref_unit</string>
    <string name="tare">Tare</string>
    <string name="use_current_value">Use current weight</string>
    <string name="item">Item</string>
    <string name="unit">Unit</string>
    <string name="saved_last_pannel">saved_last_pannel</string>
    <string name="scale_settings">Scale settings</string>
    <string name="counting_settings">Counting settings</string>
    <string name="load_cell_settings">Load cell settings</string>
    <string name="calibrate_load_cell">Calibrate load cell</string>
    <string name="reference_weight">Reference weight</string>
    <string name="reference_count">Reference count</string>
    <string name="current_weight">Current weight:</string>
    <string name="_12_4">0.0</string>
    <string name="_6">0</string>
    <string name="count_unit">Unit (count)</string>
    <string name="g">g</string>
    <string name="save">Save</string>
</resources>
