<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/settings_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_settings" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/current_weight"
                style="@style/settings_parameter"
                app:layout_constraintBaseline_toBaselineOf="@+id/liveValue"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/liveValue"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="left"
                app:layout_constraintBaseline_toBaselineOf="@+id/tarebutton"
                app:layout_constraintStart_toEndOf="@+id/textView"
                tools:text="0 gr" />

            <Button
                android:id="@+id/tarebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/settings_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counting_settings" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/settings_parameter"
                    android:text="@string/reference_weight" />

                <EditText
                    android:id="@+id/ref_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:ems="10" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/setWeightbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="8dp"
                    android:text="@string/use_current_value" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/settings_parameter"
                    android:text="@string/reference_count" />

                <EditText
                    android:id="@+id/refCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    style="@style/settings_parameter" />

                <EditText
                    android:id="@+id/countUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/item"
                    android:inputType="textAutoComplete" />
            </TableRow>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/settings_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_cell_settings" />

        <Button
            android:id="@+id/calibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calibrate_load_cell" />

    </LinearLayout>
</ScrollView>
